--- a/2-methods.qmd
+++ b/2-methods.qmd
@@ -100,7 +100,7 @@ KATH is the second largest teaching hospital in Ghana with about 1000-bed capaci
 
 MCHC is centrally located in the Sub-Metro within the Kumasi Metropolis. It has a catchment population of about 244,431 representing 11.75% of the population in Kumasi. The first half-year report (January – June) for 2019 showed a hospital attendance of 20,988 with children less than 5 years constituting 11,258 (53%) patients. The total hospital deliveries has risen from 979 in 2017 to 1,379 by June of 2019. The Hospital has an active unit for immunization of newborns and could thus provide the needed numbers for this iNTS study.
 
-### **Incidence of iNTS disease at VacciNTS sites**
+### Incidence of iNTS disease at VacciNTS sites
 
 Previous data from Malawi has estimated that iNTS defined by non-typhoidal salmonella (NTS) isolated from non-sterile sites, including blood and cerebrospinal fluid, collected in passive surveillance from QECH-MLW peaked in Malawi in 2002 reaching epidemic incidence of 242 cases per 100,000 person-years of observation (PYO) [@feasey_three_2015], and has been steadily declining to 6.9 per 100,000 PYO in 2019 [@wilson_incidence_2022]. In Kenya peak iNTS incidence has been estimated at 369.7 (291.1 - 457.9) per 100,000 in 2010 in Lwak, a rural region in Western Kenya [@verani2015] and 416.7 (256.9 - 613.8) per 100,000 PYO in 2009 in Siaya County, Kenya, falling to 59.8 (32.9 - 94.4) in 2014 [@oneko_emergence_2015] and 13.6 (0.2 - 41.6) in Kibera in 2014 [@marks_incidence_2017]. In Burkina Faso, estimates from 2012 were 37.6 (13.5 - 72.5) per 100,000 PYO in Nioko II (sub-urban) and 35.2 (3.0 - 93.6) in Polesgo (urban). Estimates from Asante Akim, Ghana 29.5 (12.0 - 54.0) (urban) and 46.8 (23.9 - 76.9) (rural) in 2010 [@marks_incidence_2017].
 
@@ -376,7 +376,9 @@ Samples will be transported daily to the field laboratory for centrifugation, al
 
 ### Study design
 
-We carried out a prospective cohort study with paired serology samples at baseline and 3-months taken from the same individuals. Two thousand children aged 0–5 years sampled across age-strata were recruited, randomly sampled throughout household-censused enumeration areas. We spread sampling evenly throughout the year in Chikwawa district, Malawi, aiming to capture peak iNTS season in the middle of the study period. These children were evenly recruited from the vaccinated (Montfort) and non-vaccinated clusters (Chikwawa) of the EPIMAL trial. We selected households containing children 0–5 years via a two-stage sampling technique. In the first stage enumeration areas (EA) were selected using probability proportional to size (PPS) sampling, with stratification according to malaria prevalence. In the second stage households containing children 0–5 years were randomly sampled from selected Enumeration Area (EA). Any child eligible in the household was invited to participate in the study. We aimed to collect approximately 2500 stool samples and 4000 paired blood samples (to account for 20% loss to follow-up), measuring antibody titres (IgG) and changes in serum bactericidal activity (SBA) for the most common NTS serovars (S. Typhimurium and S. Enteritidis) and other serovars, to understand the age-stratified acquisition of immunity and how this varied with risk factor exposure. We performed anthropometric measurements, malaria (rapid diagnostic tests \[RDT\] and thick blood films), haemocue and sickle RDT to assess the association with the main risk factors.
+We carried out a prospective cohort study with paired serology samples at baseline and 3-months taken from the same individuals. 2400 children aged 0–5 years sampled across age-strata were recruited, randomly sampled throughout household-censused enumeration areas. We spread sampling evenly throughout the year in Chikwawa district, Malawi, aiming to capture peak iNTS season in the middle of the study period. Children were identified from census data collected by the EPIMAL study teams in Chikwawa, Malawi [@praet2022]. The EPIMAL study is a phase four cluster randomised control trial of the malaria vaccine RTS,S/AS01~E~ across three sub-Saharan African sites, including Malawi, aimed at assessing the safety impact and effectiveness of the vaccine post-introduction. Each country is divided into cluster areas containing a number of enumeration areas, of which contain a number of towns, villages or settlements. Each cluster is randomly assigned to receive the RTS,S/AS01~E~ vaccine or not receive the RTS,S/AS01~E~ vaccine. As part of the EPIMAL study cross-sectional yearly surveys are carried out collecting demographic information, medical and vaccination history and additional information regarding use of malaria prophylaxis. The EPIMAL study uses community representatives who continually update the census records for new births, in and out migrations and deaths in their community. This allowed us to ensure we were able to recruit infants in the first few months of life throughout our 15 months of recruitment.
+
+We recruited children across the vaccinated (Montfort) and non-vaccinated clusters (Chikwawa) of the EPIMAL trial. We selected households from the EPIMAL census data containing children 0–5 years via a two-stage sampling technique. In the first stage enumeration areas (EA) were selected using probability proportional to population size (PPS) sampling, with stratification according to malaria prevalence from the malaria indicator survey (MIS) 2017 data for Chikwawa (@fig-MIS2017) [@malaria2017, @thedhs]. Enumeration areas were stratified into low (6-10%), medium (10-14%), high (15-19%) and very high (20%+) plasmodium falciparum parasite prevalence (PfPR) as per MIS 2017 (@fig-MIS2017). In the second stage households containing children 0–5 years were randomly sampled from selected Enumeration Area (EA). Any child eligible in the household was invited to participate in the study. We aimed to collect approximately 2500 stool samples and 4000 paired blood samples (to account for 20% loss to follow-up), measuring antibody titres (IgG) and changes in serum bactericidal activity (SBA) for the most common NTS serovars (S. Typhimurium and S. Enteritidis) and other serovars, to understand the age-stratified acquisition of immunity and how this varied with risk factor exposure. We performed anthropometric measurements, malaria (rapid diagnostic tests \[RDT\] and thick blood films), haemocue and sickle RDT to assess the association with the main risk factors. See published SAiNTS protocol for further methodological details including sample size calculations for the main study [@dale2024].
 
 ::: {layout-nrow="2"}
 ![Location of SAINTS study, Chikwawa District, Southern Malawi](figures/5_images/ChikBaselineMapGeo.png){width="300"} ![EPIMAL Study Cluster Areas: Chikwawa (shaded pink) and St Montfort (shaded purple)](figures/5_images/ChikBaselineMapGeo2.png){width="300"}
