--- a/6-serocatalytic.qmd
+++ b/6-serocatalytic.qmd
@@ -689,7 +689,7 @@ print(panel1)
 ```
 ## Discussion
 
-This serocatalytic model using antibody data for non-typhoidal salmonella (NTS) from children living in endemic settings in sub-Saharan Africa, demonstrates how using cross-sectional age-stratified serological data can be used to understand the mechanisms between the relationship between NTS exposures in children and the aquisition of natural immunity. Different hypotheses could be tested by developing models with different underlying mechanisms serology data was improved assuming that the force of infection (lambda) increased around age of weaning (4-6 months). The hypothesis that children have a high exposure to enteric pathogens around the age of weaning, and that this increases exponentially as they become more mobile and able to explore their environment through oral contact is consistent with the observed age-stratified point prevalence of eNTS detected on stool microbiology in the SAiNTS study cohort in Malawi as demonstrated in chapter 5 (cross-ref stool diagram). However, the figure shown in chapter 5 shows exposure to all NTS.
+This serocatalytic model using non-typhoidal salmonella (NTS) antibody data from children living in endemic settings in sub-Saharan Africa, demonstrates how using cross-sectional age-stratified serological data can be used to understand the mechanisms between the relationship between NTS exposures in children and the aquisition of natural immunity. Different hypotheses can be tested by developing mechanistic models able to explain the observed age-patterns in the serology data. The model fitting to the data was improved assuming that the force of infection (lambda) of enteric NTS infections leading to S. typhimurium specific IgG responses increased around age of weaning (\~6 months). The hypothesis that children have a higher infections with enteric pathogens around the age of weaning, and that this increases exponentially as they become more mobile and able to explore their environment through oral contact is consistent with the observed age-stratified point prevalence of eNTS detected on stool microbiology in the SAiNTS study cohort in Malawi as demonstrated in chapter 5 (cross-ref stool diagram). However, the figure shown in chapter 5 shows exposure to all NTS serovars, if we restrict to the immunodominant 04 and 09 . This pattern has also been observed in shigella infections in children 0 - 24 months longitudinally followed up in in the MAL-ED study @fig-MAL_ED [@rogawski_mcquade_epidemiology_2020].
 
 Fecal shedding/ duration of carriage/
 
